@@ -185,6 +185,9 @@ line.
 .B set/unset smooth
 Use smooth scrolling by default.
 .TP
+.B set/unset softwrap
+Enable soft line wrapping for easier viewing of very long lones.
+.TP
 .B set speller "\fIspellprog\fP"
 Use spelling checker \fIspellprog\fP instead of the built-in one, which
 calls \fIspell\fP.
@@ -207,6 +210,9 @@ Enable experimental generic-purpose undo code.
 .TP
 .B set/unset view
 Disallow file modification.
+.TP
+.B set/unset softwrap
+Enable soft line wrapping for easier viewing of very long lones.
 .TP
 .B set whitespace "\fIstring\fP"
 Set the two characters used to display the first characters of tabs and
